--- a/Leader/View/SignUp.storyboard
+++ b/Leader/View/SignUp.storyboard
@@ -55,7 +55,7 @@
                                     </connections>
                                 </textField>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leader3" translatesAutoresizingMaskIntoConstraints="NO" id="u67-xk-u3N">
-                                    <rect key="frame" x="0.0" y="30" width="375.00000000000023" height="200"/>
+                                    <rect key="frame" x="0.0" y="30" width="375" height="200"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="200" id="XMI-VU-YS6"/>
                                     </constraints>
