--- a/Leader/View/Base.lproj/Main.storyboard
+++ b/Leader/View/Base.lproj/Main.storyboard
@@ -918,7 +918,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Anon" translatesAutoresizingMaskIntoConstraints="NO" id="I5q-zX-13o">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_1512" translatesAutoresizingMaskIntoConstraints="NO" id="I5q-zX-13o">
                                 <rect key="frame" x="15" y="50" width="175" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="Ajj-29-3ZU"/>
@@ -1182,11 +1182,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Anon" width="512" height="512"/>
         <image name="BugReport" width="400" height="400"/>
         <image name="Calendar" width="25" height="25"/>
         <image name="FBLA" width="640" height="640"/>
         <image name="Home" width="25" height="25"/>
+        <image name="IMG_1512" width="2481" height="3732"/>
         <image name="Instagram" width="1200" height="1199"/>
         <image name="LogOut" width="213.33332824707031" height="213.33332824707031"/>
         <image name="People" width="640" height="640"/>
